--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -16,8 +16,16 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.1
       - name: Install dependencies
         run: npm ci
       - name: Run utils tests
         run: npm t utils
+      - name: Setup PostgreSQL
+        uses: Harmon758/postgresql-action@v1.0.0
+        with:
+          postgresql db: 'my_db'
+          postgresql user: 'test_user'
+          postgresql password: 'test_password'
+      - name: Run integration tests
+        run: PGDATABASE=my_db PGUSER=test_user PGPASSWORD=test_password npm t integration
